<resources>
    <string name="app_name">Lab_3</string>
    <string name="txtCalcWindBottom">0</string>
    <string name="btnMemClear">MC</string>
    <string name="btnMemRecal">MR</string>
    <string name="btnMemSave">MS</string>
    <string name="btnMemAdd">M+</string>
    <string name="btnMemSub">M-</string>
    <string name="btnBackspace">⬅</string>
    <string name="btnClearLastNmbr">CE</string>
    <string name="btnClearAllInput">C</string>
    <string name="btnChangeSigh">±</string>
    <string name="btnSquarRoot">√</string>
    <string name="btnDiv">÷</string>
    <string name="btnPerccent">%</string>
    <string name="btnMultiply">*</string>
    <string name="btnDivFromOne">1/x</string>
    <string name="btnSub">-</string>
    <string name="btnDot">.</string>
    <string name="btnAdd">+</string>
    <string name="btnEquals">=</string>
    <string name="btnNum0">0</string>
    <string name="btnNum1">1</string>
    <string name="btnNum2">2</string>
    <string name="btnNum3">3</string>
    <string name="btnNum4">4</string>
    <string name="btnNum5">5</string>
    <string name="btnNum6">6</string>
    <string name="btnNum7">7</string>
    <string name="btnNum8">8</string>
    <string name="btnNum9">9</string>

</resources>