<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtCalcWindBottom"
        android:layout_width="381dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:text="@string/txtCalcWindBottom"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toTopOf="@+id/btnMemSave"
        app:layout_constraintEnd_toEndOf="@+id/btnMemSub"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnMemClear" />

    <Button
        android:id="@+id/btnMemClear"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnMemClear"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBackspace"
        app:layout_constraintEnd_toEndOf="@+id/btnBackspace"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnBackspace" />

    <Button
        android:id="@+id/btnMemRecal"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnMemRecal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnClearLastNmbr"
        app:layout_constraintEnd_toEndOf="@+id/btnClearLastNmbr"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnClearLastNmbr" />

    <Button
        android:id="@+id/btnMemSave"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnMemSave"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnClearAllInput"
        app:layout_constraintEnd_toEndOf="@+id/btnClearAllInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnClearAllInput" />

    <Button
        android:id="@+id/btnMemAdd"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnMemAdd"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeSigh"
        app:layout_constraintEnd_toEndOf="@+id/btnChangeSigh"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnChangeSigh" />

    <Button
        android:id="@+id/btnMemSub"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnMemSub"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSquarRoot"
        app:layout_constraintEnd_toEndOf="@+id/btnSquarRoot"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSquarRoot" />

    <Button
        android:id="@+id/btnBackspace"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:includeFontPadding="false"
        android:onClick="onBtnClickRemoveLastSymbol"
        android:text="@string/btnBackspace"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNum7"
        app:layout_constraintEnd_toEndOf="@+id/btnNum7"
        app:layout_constraintStart_toStartOf="@+id/btnNum7" />

    <Button
        android:id="@+id/btnClearLastNmbr"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnClickClearLastNmbr"
        android:text="@string/btnClearLastNmbr"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNum8"
        app:layout_constraintEnd_toEndOf="@+id/btnNum8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnNum8" />

    <Button
        android:id="@+id/btnClearAllInput"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnClickClearAllText"
        android:text="@string/btnClearAllInput"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNum9"
        app:layout_constraintEnd_toEndOf="@+id/btnNum9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnNum9" />

    <Button
        android:id="@+id/btnChangeSigh"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnClickChangeSigh"
        android:text="@string/btnChangeSigh"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDiv"
        app:layout_constraintEnd_toEndOf="@+id/btnDiv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnDiv" />

    <Button
        android:id="@+id/btnSquarRoot"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnSquarRoot"
        android:textSize="20sp"
        android:onClick="onBtnClickSquarRoot"
        app:layout_constraintBottom_toTopOf="@+id/btnPerccent"
        app:layout_constraintEnd_toEndOf="@+id/btnPerccent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnPerccent" />

    <Button
        android:id="@+id/btnNum7"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnClickAdd7ToCalcWin"
        android:text="@string/btnNum7"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNum4"
        app:layout_constraintEnd_toEndOf="@+id/btnNum4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnNum4" />

    <Button
        android:id="@+id/btnNum8"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnClickAdd8ToCalcWin"
        android:text="@string/btnNum8"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNum5"
        app:layout_constraintEnd_toEndOf="@+id/btnNum5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnNum5" />

    <Button
        android:id="@+id/btnNum9"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnClickAdd9ToCalcWin"
        android:text="@string/btnNum9"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNum6"
        app:layout_constraintEnd_toEndOf="@+id/btnNum6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnNum6" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnDiv"
        android:textSize="20sp"
        android:onClick="onBtnClickDiv"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiply"
        app:layout_constraintEnd_toEndOf="@+id/btnMultiply"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnMultiply" />

    <Button
        android:id="@+id/btnPerccent"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnPerccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDivFromOne"
        app:layout_constraintEnd_toEndOf="@+id/btnDivFromOne"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnDivFromOne" />

    <Button
        android:id="@+id/btnNum4"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnClickAdd4ToCalcWin"
        android:text="@string/btnNum4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNum1"
        app:layout_constraintEnd_toEndOf="@+id/btnNum1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnNum1" />

    <Button
        android:id="@+id/btnNum5"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnClickAdd5ToCalcWin"
        android:text="@string/btnNum5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNum2"
        app:layout_constraintEnd_toEndOf="@+id/btnNum2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnNum2" />

    <Button
        android:id="@+id/btnNum6"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnClickAdd6ToCalcWin"
        android:text="@string/btnNum6"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNum3"
        app:layout_constraintEnd_toEndOf="@+id/btnNum3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnNum3" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnMultiply"
        android:textSize="20sp"
        android:onClick="onBtnClickMultiply"
        app:layout_constraintBottom_toTopOf="@+id/btnSub"
        app:layout_constraintEnd_toEndOf="@+id/btnSub"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSub" />

    <Button
        android:id="@+id/btnDivFromOne"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnDivFromOne"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEquals"
        app:layout_constraintEnd_toEndOf="@+id/btnEquals"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnEquals" />

    <Button
        android:id="@+id/btnNum1"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnClickAdd1ToCalcWin"
        android:text="@string/btnNum1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNumO"
        app:layout_constraintStart_toStartOf="@+id/btnNumO" />

    <Button
        android:id="@+id/btnNum2"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnClickAdd2ToCalcWin"
        android:text="@string/btnNum2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNumO"
        app:layout_constraintEnd_toStartOf="@+id/btnNum3"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toEndOf="@+id/btnNum1" />

    <Button
        android:id="@+id/btnNum3"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnClickAdd3ToCalcWin"
        android:text="@string/btnNum3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDot"
        app:layout_constraintEnd_toStartOf="@+id/btnEquals"
        app:layout_constraintStart_toEndOf="@+id/btnNum1" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnSub"
        android:textSize="20sp"
        android:onClick="onBtnClickSub"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toStartOf="@+id/btnEquals"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toEndOf="@+id/btnNum3" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="65dp"
        android:layout_height="126dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnEquals"
        android:onClick="onBtnClickEquals"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnNumO"
        android:layout_width="144dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnClickAdd0ToCalcWin"
        android:text="@string/btnNum0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnDot"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnNum3"
        app:layout_constraintStart_toStartOf="@+id/btnNum3" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnClickAdd"
        android:text="@string/btnAdd"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSub"
        app:layout_constraintStart_toStartOf="@+id/btnSub" />

    <TextView
        android:id="@+id/txtCalcWindTop"
        android:layout_width="381dp"
        android:layout_height="25dp"
        android:gravity="end"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/txtCalcWindBottom"
        app:layout_constraintEnd_toEndOf="@+id/txtCalcWindBottom"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtCalcWindBottom" />

</androidx.constraintlayout.widget.ConstraintLayout>